Local collection visibility doesn't update when an item is moved between collections #76346

Closed
opened 2020-05-02 22:46:18 +02:00 by Alexander Dumproff · 11 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-29 19:35, hash: cd833d8879

Short description of error
Local collections in viewports don't update when an object is wither created or moved into one currently (in)active in a 3D view.
When you create or move an object into a collection that is currently visible or hidden inside one or more 3D views then the visibility isn't updated correctly unless the eye icon for all affected collections has been activated.

Here is a video to demonstrate this more clearly:
2020-05-02 22-38-06.mkv

Exact steps for others to reproduce the error
#76346.blend

  • Open file
  • Move cube between collections
    Viewports won't update.
  • Uncheck the collection "Exclude from view layer" box, and update occurs.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-04-29 19:35, hash: `cd833d8879` **Short description of error** Local collections in viewports don't update when an object is wither created or moved into one currently (in)active in a 3D view. When you create or move an object into a collection that is currently visible or hidden inside one or more 3D views then the visibility isn't updated correctly unless the eye icon for all affected collections has been activated. Here is a video to demonstrate this more clearly: [2020-05-02 22-38-06.mkv](https://archive.blender.org/developer/F8508117/2020-05-02_22-38-06.mkv) **Exact steps for others to reproduce the error** [#76346.blend](https://archive.blender.org/developer/F8511326/T76346.blend) - Open file - Move cube between collections Viewports won't update. - Uncheck the collection "Exclude from view layer" box, and update occurs.

Added subscriber: @A.Lex_3D

Added subscriber: @A.Lex_3D
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

nvm, checked the video.

nvm, checked the video.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @actuday

Added subscriber: @actuday

I'm a student developer trying to contribute to blender, and this doesn't seem to hard an issue. Could I try this out? Any pointers as to which parts of the code base I must focus on? I was able to reproduce this issue on 2.90, and it looks simpler to fix than most stuff in the quick hacks.

I'm a student developer trying to contribute to blender, and this doesn't seem to hard an issue. Could I try this out? Any pointers as to which parts of the code base I must focus on? I was able to reproduce this issue on 2.90, and it looks simpler to fix than most stuff in the quick hacks.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Hi @actuday, from a quick test here I noticed that forcing the viewport to re-calculate the objects visibility fix it (e.g., add a new collection and toggle its visibility, or toggle the local collection button). So see what is happening when either of these operations happen.

There is a chance that these operations are calling an overall update of the visibility calculation, which is less ideal. In that case compare to what the move to collection operator is doing. Maybe it is already calling for an update, but it is missing the viewports? Maybe it is being smart about updating the object visibility (most likely scenario) but it is messing something up.

Hi @actuday, from a quick test here I noticed that forcing the viewport to re-calculate the objects visibility fix it (e.g., add a new collection and toggle its visibility, or toggle the local collection button). So see what is happening when either of these operations happen. There is a chance that these operations are calling an overall update of the visibility calculation, which is less ideal. In that case compare to what the move to collection operator is doing. Maybe it is already calling for an update, but it is missing the viewports? Maybe it is being smart about updating the object visibility (most likely scenario) but it is messing something up.

Relevant information: This bug also affects moving an object into a locally hidden collection from the 'Move to collection Menu' (shortcut - M).

Relevant information: This bug also affects moving an object into a locally hidden collection from the 'Move to collection Menu' (shortcut - M).

This issue was referenced by a5db981b0e

This issue was referenced by a5db981b0ea044313239c3cc2ee92d19a8f682ea

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Dalai Felinto self-assigned this 2020-09-09 16:58:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76346
No description provided.